sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:6: error: illegal start of simple expression
  	var NbEch = 0
        ^AlgBubbleSort3:18: error: Unmatched closing brace '}' ignored here
}
^